Fix #43 - Align cards in Safari browser

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ header h1 {
     padding: 1.5rem 1rem;
     width: 270px;
     height: 370px;
+    vertical-align: top;
     overflow: hidden;
 }
 
